# dkml-component-opam

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGES.md  DEVELOPMENT.md  META.dkml-component-offline-opam.template  META.dkml-component-offline-opamshim.template  META.dkml-component-staging-opam64.template  OUTSTANDING_ISSUES.md  README.md  conf-dkml-cross-toolchain.opam  dkml-base-compiler.opam  dkml-component-common-opam.opam  dkml-component-enduser-ocamlcompiler.opam  dkml-component-network-ocamlcompiler.opam  dkml-component-ocamlcompiler.opam  dkml-component-ocamlrun.opam  dkml-component-offline-opam.opam  dkml-component-offline-opam.opam.template  dkml-component-offline-opam32.opam  dkml-component-offline-opam64.opam  dkml-component-offline-opamshim.opam  dkml-component-offline-opamshim.opam.template  dkml-component-staging-ocamlrun.opam  dkml-component-staging-opam32.opam  dkml-component-staging-opam32.opam.template  dkml-component-staging-opam64.opam  dkml-component-staging-opam64.opam.template  dkml-option-32bit.opam  dune-project  ocaml.opam
.ci/dkml-compilers/gl/: setup-dkml.gitlab-ci.yml
.ci/dkml-compilers/pc/: setup-dkml-darwin_x86_64.sh  setup-dkml-linux_x86.sh  setup-dkml-linux_x86_64.sh
.github/workflows/: asset-opam.yml  asset.yml  dkml.yml  initiate-external-tests.yml  main.yml  syntax.yml
.github/workflows/scripts/: bundle-linux-asset.sh  install-linux-asset.sh  install-win32-component.sh  pin-unix-asset.sh  pin-windows-asset.ps1
.github/workflows/scripts/opam/: SOURCE.txt
assets/: dune-workspace.darwin_arm64  dune-workspace.darwin_x86_64  dune.exclude-all
assets/staging-files/win32/: PathMods.Tests.ps1  setup-machine.bat  setup-machine.ps1  setup-userprofile.bat  setup-userprofile.ps1  uninstall-userprofile.bat  uninstall-userprofile.ps1
assets/staging-files/win32/DeploymentVersion/: DeploymentVersion.psm1
assets/staging-files/win32/Machine/: Machine.psm1  vsconfig.json
assets/staging-files/win32/PathMods/: PathMods.psm1
assets/staging-files/win32/Project/: Project.psm1
assets/staging-files/win32/SingletonInstall/Deployers/: Deployers.psm1
assets/staging-files/win32/UnixInvokers/: UnixInvokers.psm1
ci/: build-test.sh
dl/: dune
dl/opam/src_ext/archives/: .gitkeep
install/ocamlcompiler/: dkml_component_ocamlcompiler.ml  dune
install/ocamlcompiler/installtime_enduser/: dune  install.ml
install/ocamlrun/: dkml_component_ocamlrun.ml  dune
src/: README.md  reproducible-compile-ocaml-1-setup.sh  reproducible-compile-ocaml-2-build_host.sh  reproducible-compile-ocaml-3-build_cross.sh  reproducible-compile-ocaml-README.md  reproducible-compile-ocaml-check_linker.sh  reproducible-compile-ocaml-cross_4_11.patch  reproducible-compile-ocaml-cross_4_12.patch  reproducible-compile-ocaml-cross_4_12_extra.patch  reproducible-compile-ocaml-cross_4_12_unused_windows_arm.patch  reproducible-compile-ocaml-cross_4_13.patch  reproducible-compile-ocaml-cross_5_00_extra.patch  reproducible-compile-ocaml-cross_flexdll_0_39.patch  reproducible-compile-ocaml-functions.sh  standard-compiler-env-to-ocaml-configure-env.sh  standard-compiler-env-to-ocaml-configure-launcher.sh
src/api/staging-ocamlrun/: dune  staging_ocamlrun_api.ml  staging_ocamlrun_api.mli
src/buildtime/: dkml_component_offline_opam.ml  dkml_component_offline_opamshim.ml  dkml_component_staging_opam32.ml  dkml_component_staging_opam64.ml  dune
src/buildtime/network-ocamlcompiler/: dune
src/buildtime/offline-opam/32/: dkml_component_offline_opam.ml  dune
src/buildtime/offline-opam/64/: dkml_component_offline_opam.ml  dune
src/buildtime/staging-opam/32/: dkml_component_offline_opam32.ml  dune
src/buildtime/staging-opam/64/: dune
src/buildtime_installer/: dune  network_ocamlcompiler.ml
src/buildtime_installer/network-ocamlcompiler/: dune  network_ocamlcompiler.ml
src/buildtime_installer/offline-opam/: dkml_component_offline_opam.ml  dune
src/buildtime_installer/staging-ocamlrun/: dune  staging_ocamlrun.ml
src/ci/: github-actions-ci-to-ocaml-configure-env.sh
src/common/: dune  ocamlcompiler_common.ml  opam_common.ml
src/installtime/setup-machine/: dune
src/installtime/setup-userprofile/: setup_userprofile.ml
src/installtime_enduser/: dlls.uninstall.txt  dune  opam_install.ml  opam_uninstall.ml  opamshim_install.ml
src/installtime_enduser/setup-machine/: dune  setup_machine.ml
src/installtime_enduser/setup-userprofile/: dune  setup_userprofile.ml
src/opamtime/: brewbundle.sh
src/repro/: r-c-opam-1-setup.sh  r-c-opam-2-build.sh  r-c-opam-9-trim.sh  r-c-opam-README.md
src2/: README.md
src2/buildtime_installer/: dune  enduser_ocamlcompiler.ml  network_ocamlcompiler.ml  staging_ocamlrun.ml
src2/installtime_enduser/: dune
toolchain/: add-findlib-conf.sh  findlib-configure.sh  findlib-install.sh
