opam-version: "2.0"
version: "4.12.1-1"
synopsis: "Add findlib toolchains for any DKML cross-compilers"
authors: ["Diskuv, Inc. <opensource+diskuv-ocaml@support.diskuv.com>"]
license: "Apache-2.0"
homepage: "https://github.com/diskuv/dkml-component-ocamlcompiler"
bug-reports: "https://github.com/diskuv/dkml-component-ocamlcompiler/issues"
depends: [
  "dkml-base-compiler" {= "4.12.1-1"}
  "ocamlfind"          {>= "1.9.1"}
]
build: [
  [
    "sh"
    "toolchain/add-findlib-conf.sh"
    "%{lib}%/findlib.conf"
    "%{dkml-base-compiler:share}%/mlcross"
  ]
]
maintainer: ["opensource+diskuv-ocaml@support.diskuv.com"]
