opam-version: "2.0"
version: "4.12.1-1"
synopsis: "Add findlib toolchains for any DKML cross-compilers"
authors: ["Diskuv, Inc. <opensource+diskuv-ocaml@support.diskuv.com>"]
license: "Apache-2.0"
homepage: "https://github.com/diskuv/dkml-component-ocamlcompiler"
bug-reports: "https://github.com/diskuv/dkml-component-ocamlcompiler/issues"
depends: [
  "ocamlfind"           {>= "1.9.1"}
  "ocaml-system"        {= "4.12.1"   & ocaml-system-mlcross-installation} |
  "dkml-base-compiler"  {= "4.12.1-1" & !ocaml-system-mlcross-installation}
]
install: [
  [
    "install" "-d" "%{lib}%/findlib.conf.d"
  ]
  [
    "bash"
    "toolchain/add-findlib-conf.sh"
    "%{lib}%"
    "%{ocaml-system-mlcross-installation}%" { ocaml-system:installed }
    "%{dkml-base-compiler:share}%/mlcross"  { dkml-base-compiler:installed }
  ]
]
maintainer: ["opensource+diskuv-ocaml@support.diskuv.com"]
