opam-version: "2.0"
name: "dkml-component-network-ocamlcompiler"
version: "4.12.1-1"
synopsis: "DKML component for ocamlcompiler"
description:
  "Network installed component for OCaml bytecode and native compiler"
maintainer: ["opensource+diskuv-ocaml@support.diskuv.com"]
authors: ["Diskuv, Inc. <opensource+diskuv-ocaml@support.diskuv.com>"]
license: "Apache-2.0"
homepage: "https://github.com/diskuv/dkml-component-ocamlcompiler"
bug-reports: "https://github.com/diskuv/dkml-component-ocamlcompiler/issues"
depends: [
  "dkml-component-network-unixutils"  {>= "0.1.0"}
  "dkml-component-staging-ocamlrun"   {= version}
  "dkml-install"            {>= "0.1.0"}
  # install/ocamlcompiler/dune site requires dkml-install-runner package
  "dkml-install-runner"     {>= "0.1.0"}
  "dune"                    {>= "2.9"}
  "dune-site"               {>= "2.9"}
]
build-env: [
  [DKML_VER = "0.4.0"]
  #   OCaml 4.12.1
  [OCAML_GIT_REV = "46c947827ec2f6d6da7fe5e195ae5dda1d2ad0c5"]
]
build: [
  # 1. Portable shell scripts for OCaml compiling
  #
  # ** The only portable shell scripts needed are that that compile the bytecode
  # ** interpreter for use in the dkml-component-staging-ocamlrun build:[] section.
  # ** Any other logic needed for compiling the full native-code compiler 
  # ** can be done in OCaml bytecode. But since the portable shell scripts
  # ** do 90% of the work needed for the native-code compiler, no strong
  # ** reason (yet) to convert the native-code compiler installation into OCaml
  # ** bytecode.
  #
  #   Create a DKMLDIR. Its structure mimics a git submodule setup.
  #
  #   <dkmldir>/.dkmlroot
  ["install" "-d" "dkmldir"]
  ["sh" "-c" "printf 'dkml_root_version=%s\\n' \"$DKML_VER\" > dkmldir/.dkmlroot"]

  #   <dkmldir>/vendor/dkml-runtime-common/
  ["install" "-d" "dkmldir/vendor/dkml-runtime-common"]
  ["tar" "xCfz" "dkmldir/vendor/dkml-runtime-common" "dl/dkml-runtime-common.tar.gz" "--strip-components=1"]

  #   <dkmldir>/vendor/dkml-compiler/
  ["install" "-d" "dkmldir/vendor/dkml-compiler/src"]
  ["tar" "xCfz" "dkmldir/vendor/dkml-compiler" "dl/dkml-compiler.tar.gz" "--strip-components=1"]

  #   Run reproducible-compile-ocaml-1-setup.sh
  #   ** It may seem redundant to recreate the same reproducible directory that
  #   ** is available in ocamlrun. BUT ... it is a bad idea to couple the
  #   ** bytecode interpreter that runs the installer plugins to the same
  #   ** version as the OCaml compiler we are installing for the end-user.
  [
    "sh" "-eufc"
    """
    env TOPDIR=dkmldir/vendor/dkml-runtime-common/all/emptytop \
      dkmldir/vendor/dkml-compiler/src/reproducible-compile-ocaml-1-setup.sh \
      -d dkmldir \
      -t '%{_:share}%/staging-files/generic' \
      -u "$OCAML_GIT_REV" \
      -v "$OCAML_GIT_REV" \
      -r \
      -k vendor/dkml-compiler/src/standard-compiler-env-to-ocaml-configure-env.sh
    """
  ]

  # 2. Build install plugin
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
dev-repo: "git+https://github.com/diskuv/dkml-component-ocamlcompiler.git"
extra-source "dl/dkml-runtime-common.tar.gz" {
  # dkml-runtime-common can be less or equal to DKML_VER
  src: "https://github.com/diskuv/dkml-runtime-common/archive/refs/tags/v0.4.0-prerel12.tar.gz"
  checksum: [
    "sha256=751406f8d82c6afb12a1ff4f84c9298d4d045c52a7aa2652a8a89124ce1985ea"
  ]
}
extra-source "dl/dkml-compiler.tar.gz" {
  # dkml-compiler can be less or equal to DKML_VER
  src: "https://github.com/diskuv/dkml-compiler/archive/refs/tags/v0.4.0-prerel12_r2.tar.gz"
  checksum: [
    "sha256=b603708ff17829911c3dec2b2ed9547d84db16b80f592d34ae89d1c1d23f25dd"
  ]
}
