opam-version: "2.0"
version: "4.12.1"
synopsis: "DKML component for ocamlrun"
description:
  "Standalone distribution of OCaml in <share>/staging-files containing just ocamlrun and the OCaml Stdlib"
maintainer: ["opensource+diskuv-ocaml@support.diskuv.com"]
authors: ["Diskuv, Inc. <opensource+diskuv-ocaml@support.diskuv.com>"]
license: "Apache-2.0"
homepage: "https://github.com/diskuv/dkml-component-ocamlrun"
bug-reports: "https://github.com/diskuv/dkml-install-api/issues"
depends: [
]
build-env: [
  # The runtime-common can be less or equal to DKML_VER
  [DKML_RUNTIME_COMMON_VER = "0.4.0"]
  [DKML_VER = "0.4.0"]
  #   OCaml 4.12.1
  [OCAML_GIT_REV = "46c947827ec2f6d6da7fe5e195ae5dda1d2ad0c5"]

]
build: [
  # Create a DKMLDIR. Its structure mimics a git submodule setup.
  #   <dkmldir>/.dkmlroot
  ["install" "-d" "dkmldir"]
  ["sh" "-c" "printf 'dkml_root_version=%s\\n' \"$DKML_VER\" > dkmldir/.dkmlroot"]

  #   <dkmldir>/vendor/dkml-runtime-common/
  ["install" "-d" "dkmldir/vendor/dkml-runtime-common"]
  ["sh" "-eufc" "curl -L -o dkml-runtime-common.tar.gz https://github.com/diskuv/dkml-runtime-common/archive/refs/tags/v$DKML_RUNTIME_COMMON_VER.tar.gz"]
  ["tar" "xCfz" "dkmldir/vendor/dkml-runtime-common" "dkml-runtime-common.tar.gz" "--strip-components=1"]

  #   <dkmldir>/vendor/dkml-component-ocamlrun/
  ["install" "-d" "dkmldir/vendor/dkml-component-ocamlrun/src"]
  ["sh" "-eufc" "tar cCf src/ - . | tar xCf dkmldir/vendor/dkml-component-ocamlrun/src/ -"]

  # Run reproducible-compile-ocaml-1-setup.sh
  [
    "sh" "-eufc"
    """
    env TOPDIR=dkmldir/vendor/dkml-runtime-common/all/emptytop \
      dkmldir/vendor/dkml-component-ocamlrun/src/reproducible-compile-ocaml-1-setup.sh \
      -d dkmldir \
      -t '%{_:share}%/staging-files' \
      -u "$OCAML_GIT_REV" \
      -v "$OCAML_GIT_REV" \
      -k vendor/dkml-component-ocamlrun/src/standard-compiler-env-to-ocaml-configure-env.sh
    """
  ]

  # Run reproducible-compile-ocaml-2-build_host-noargs.sh
  [
    "sh" "-eufc"
    """
    cd '%{_:share}%/staging-files'
    share/dkml/repro/100-compile-ocaml/vendor/dkml-component-ocamlrun/src/reproducible-compile-ocaml-2-build_host-noargs.sh
    """
  ]

  # Run reproducible-compile-ocaml-3-build_cross-noargs.sh (typically not needed unless we are cross-compiling)
  [
    "sh" "-eufc"
    """
    cd '%{_:share}%/staging-files'
    share/dkml/repro/100-compile-ocaml/vendor/dkml-component-ocamlrun/src/reproducible-compile-ocaml-3-build_cross-noargs.sh
    """
  ]
]
dev-repo: "git+https://github.com/diskuv/dkml-component-ocamlrun.git"
