opam-version: "2.0"
version: "4.12.1-1"
synopsis: "DKML component for ocamlrun"
description:
  "Standalone distribution of OCaml in <share>/staging-files containing just ocamlrun, the OCaml Stdlib and the other OCaml libraries (str, unix, bigarray, etc.)"
maintainer: ["opensource+diskuv-ocaml@support.diskuv.com"]
authors: ["Diskuv, Inc. <opensource+diskuv-ocaml@support.diskuv.com>"]
license: "Apache-2.0"
homepage: "https://github.com/diskuv/dkml-component-ocamlcompiler"
bug-reports: "https://github.com/diskuv/dkml-install-api/issues"
depends: [
  "dkml-install"            {>= "0.1.0"}
  # install/ocamlrun/dune site requires dkml-install-runner package
  "dkml-install-runner"     {>= "0.1.0"}
  "dune"                    {>= "2.9"}
  "dune-site"               {>= "2.9"}
]
build-env: [
  # The runtime-common can be less or equal to DKML_VER
  [DKML_RUNTIME_COMMON_VER = "0.4.0-prerel9"]
  [DKML_VER = "0.4.0"]
  #   OCaml 4.12.1
  [OCAML_GIT_REV = "46c947827ec2f6d6da7fe5e195ae5dda1d2ad0c5"]
]
build: [
  # Create a DKMLDIR. Its structure mimics a git submodule setup.
  # nit: We probably could use Opam's "extra-files" if we could control where the .tar.gz was extracted to.
  #   <dkmldir>/.dkmlroot
  ["install" "-d" "dkmldir"]
  ["dash" "-c" "printf 'dkml_root_version=%s\\n' \"$DKML_VER\" > dkmldir/.dkmlroot"]

  #   <dkmldir>/vendor/dkml-runtime-common/
  ["install" "-d" "dkmldir/vendor/dkml-runtime-common"]
  ["dash" "-eufxc" "curl -L -o dkml-runtime-common.tar.gz https://github.com/diskuv/dkml-runtime-common/archive/refs/tags/v$DKML_RUNTIME_COMMON_VER.tar.gz"]
  ["tar" "xCfz" "dkmldir/vendor/dkml-runtime-common" "dkml-runtime-common.tar.gz" "--strip-components=1"]

  #   <dkmldir>/vendor/dkml-component-ocamlcompiler/
  ["install" "-d" "dkmldir/vendor/dkml-component-ocamlcompiler/src"]
  ["dash" "-eufc" "tar cCf src/ - . | tar xCf dkmldir/vendor/dkml-component-ocamlcompiler/src/ -"]

  # Run reproducible-compile-ocaml-1-setup.sh
  [
    "dash" "-eufc"
    """
    env TOPDIR=dkmldir/vendor/dkml-runtime-common/all/emptytop \
      dkmldir/vendor/dkml-component-ocamlcompiler/src/reproducible-compile-ocaml-1-setup.sh \
      -d dkmldir \
      -t '%{_:share}%/staging-files' \
      -u "$OCAML_GIT_REV" \
      -v "$OCAML_GIT_REV" \
      -r \
      -k vendor/dkml-component-ocamlcompiler/src/standard-compiler-env-to-ocaml-configure-env.sh
    """
  ]

  # Run reproducible-compile-ocaml-3-build_cross-noargs.sh (typically a no-op unless we are cross-compiling)
  [
    "dash" "-eufc"
    """
    cd '%{_:share}%/staging-files'
    share/dkml/repro/100-compile-ocaml/vendor/dkml-component-ocamlcompiler/src/reproducible-compile-ocaml-2-build_host-noargs.sh
    """
  ]
]
dev-repo: "git+https://github.com/diskuv/dkml-component-ocamlcompiler.git"
